--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,3 +25,14 @@ footer {
     padding: 10px 10px;
     text-align: center;
 }
+
+/*
+#panelCarrito {
+    background-color: rgba(0,100,0, 0.7);
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+    height: 87vh;
+    width: 300px;
+    z-index: 2;
+}*/
